tests/negative/neg_rule3_zero_div.safe
-- Test: neg_rule3_zero_div
-- Description: Division by a variable that may be zero.
--   The divisor is of a type that includes zero, with no guard.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b
-- Expected: REJECT division_by_zero

package Zero_Div_Test

   type Value is range -100 to 100;
   function Divide (A, B : Value) returns Value


      return A / B;  -- ERROR: B may be zero


